# table

./: .gitignore  README.md  table.cabal
app/: table-demo.hs
src/Data/Text/: Table.hs  Table.hs~
